--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 *{
   margin: 0;
 }
+
+.app__header {
+  background-color: white;
+  object-fit: contain;
+  padding: 20px;
+}
+
+.app {
+  background-color: #fafafa;
+  height: 100vh;
+}
+
