--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,15 @@
   margin: 0;
 }
 
+.app {
+  background-color: #fafafa;
+  height: 100vh;
+}
+
 .app__header {
   background-color: white;
   object-fit: contain;
   padding: 20px;
-}
-
-.app {
-  background-color: #fafafa;
-  height: 100vh;
+  border-bottom: 1px solid lightgray;
 }
 
