--- a/src/Post.css
+++ b/src/Post.css
@@ -1,6 +1,15 @@
+.post{
+    background-color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+    border: 1px solid lightgray;
+}
+
 .post__image {
     width: 100%;
     object-fit: contain;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 }
 
 .post__text{
