--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 .app {
   background-color: #fafafa;
-  height: 100vh;
 }
 
 .app__header {
@@ -12,10 +11,15 @@
   object-fit: contain;
   padding: 20px;
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+}
+
+.app__headerImage {
+  object-fit: contain;
 }
 
 .app__signup{
   display: flex;
   flex-direction: column;
-  text-align: center;
 }
